# Geant4-training

./: .gitignore  README.md
Day1/: Readme.md  Task-A0.md  Task-A1.md  Task-A2.md  Task-A3.md
Day1/B1/src/: B1DetectorConstruction.cc  B1RunAction.cc
Day1/ExDay1/include/: YourDetectorConstruction.hh  YourPrimaryGeneratorAction.hh
Day1/ExDay1/src/: YourDetectorConstruction.cc
Day1/Solution-AX/: YourDetectorConstruction.cc
Day3-v2/day3/: ._Task-C1.md  Readme.md  Task-C1.md  Task-C2.md
Day3-v2/day3/ExDay3/: CMakeLists.txt
Day3-v2/day3/ExDay3/include/: YourActionInitialization.hh  YourSteppingAction.hh
Day3-v2/day3/ExDay3/src/: YourActionInitialization.cc  YourSteppingAction.cc
Day3-v2/day3/Solution-C1/: yourMainApplication.cc
Day3-v2/day3/Solution-C1/include/: YourActionInitialization.hh  YourDetectorConstruction.hh  YourEventAction.hh  YourSteppingAction.hh
Day3-v2/day3/Solution-C1/src/: YourActionInitialization.cc  YourEventAction.cc  (+1 more)
day2/: ._Task-BX.md  README.md  Solutions-B2.md  Solutions-B3.md  Task-B1.md  Task-B2.md  Task-B3.md  Task-BX.md
day2/ExDay2/: CMakeLists.txt  alt-vis.mac  restart-source.sh  yourMainApplication.cc
day2/ExDay2/include/: YourPrimaryGeneratorAction.hh
day2/ExDay2/src/: YourPrimaryGeneratorAction.cc
practice/: CMakeLists.txt  cherenkova.cc  setup_geant4.sh.save
practice/include/: Action.hh  CDetectorConstruction.hh  CSensitiveDetector.hh  PhysicsList.hh  PrimaryGenerator.hh  RunAction.hh
practice/src/: Action.cc  CDetectorConstruction.cc  CSensitiveDetector.cc  PhysicsLists.cc  PrimaryGenerator.cc  RunAction.cc
